prevent scrollbar on overflow-y

--- a/web/framework/styles/grid.styl
+++ b/web/framework/styles/grid.styl
@@ -18,7 +18,7 @@
 	text-shadow: 2px 2px 0 #222, -1px -1px 0 #222, 1px -1px 0 #222, -1px 1px 0 #222, 1px 1px 0 #222;
 	background-size 5.5em
 	border: 1px solid #AAB
-	overflow-x hidden
+	overflow hidden
 
 .participant.choice-a
 	background-color #03588C
